Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,162 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7f79bc0ca668>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b7dcca58>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b7df4fd0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b7da2588>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b7d4ab00>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b7d7d0b8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b7d25630>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b7cccbe0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b7cccc18>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b7ca16d8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b7c4cc50>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b7c79208>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f79b7c23780>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b7bcbcf8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b7bfa2b0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b7ba1828>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b7b4ada0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b7b78358>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b7b208d0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b7ac8e48>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b7af9400>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b7a9f978>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b7a47ef0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b7a774a8>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f79b7a1fa20>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b79c5f98>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b79f6550>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b799bac8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b7952080>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b79765f8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b791db70>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b78d0128>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b78f66a0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b789cc18>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b784f1d0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b7875748>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f79b781ecc0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b77cd278>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b77f47f0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b779cd68>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b774c320>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b7772898>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b771ae10>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b76cb3c8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b76f4940>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b769aeb8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b764e470>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b76709e8>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f79b761af60>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b75c9518>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b75efa90>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b75f6048>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b754b5c0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b7570b38>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b75220f0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b74c7668>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b74f0be0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b74a1198>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b7448710>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b746fc88>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f79b7420240>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b73c67b8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b73f0d30>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b739e2e8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b7346860>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b736edd8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b731d390>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b72c6908>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b72ece80>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b729c438>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b72459b0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b726cf28>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f79b721b4e0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b71c5a58>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b71ebfd0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b719c588>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b7142b00>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b71740b8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b711a630>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b70c2ba8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b70f3160>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b709a6d8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b7041c50>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b7074208>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f79b7018780>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6fc2cf8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6ff12b0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6f98828>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6fbeda0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6f71358>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6f158d0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6ec1e48>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6eef400>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6e96978>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6ebdef0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6e6f4a8>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6e16a20>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6e3ff98>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6dec550>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6d97ac8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6d46080>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6d6d5f8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6d15b70>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6cc7128>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6ced6a0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6c95c18>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6c451d0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6c6c748>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6c11cc0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6bc7278>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6beb7f0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6b93d68>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6b43320>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6b6a898>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6b10e10>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6ac23c8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6ae9940>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6a90eb8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6a42470>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6a689e8>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6a10f60>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6a3d518>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b69eba90>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b699a048>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b69425c0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b696ab38>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b69190f0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b693f668>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b68e8be0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6898198>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6841710>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6866c88>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6817240>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b683f7b8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b67e6d30>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b67972e8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b67bf860>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6764dd8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6717390>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b673c908>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b66e5e80>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6695438>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b66bd9b0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f79b6663f28>]],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pd.plotting.scatter_matrix(df)"
    ]
