Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -421,7 +421,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = \n",
+    "labels = df.\n",
     "labels_removed_df = None\n"
    ]
   },
