--- a/index.ipynb
+++ b/index.ipynb
@@ -421,8 +421,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = df.\n",
-    "labels_removed_df = None\n"
+    "labels = df.quality\n",
+    "labels_removed_df = df.drop('quality',axi)"
    ]
   },
   {
