Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -417,12 +417,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "labels = df.quality\n",
-    "labels_removed_df = df.drop('quality',axi)"
+    "labels_removed_df = df.drop('quality',axis = 1)"
    ]
   },
   {
@@ -443,7 +443,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaler = None\n",
+    "scaler = st\n",
     "scaled_df = None"
    ]
   },
