Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -443,8 +443,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaler = st\n",
-    "scaled_df = None"
+    "scaler = scaler()\n",
+    "scaled_df = scaler()"
    ]
   },
   {
