Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -444,7 +444,7 @@
    "outputs": [],
    "source": [
     "scaler = scaler()\n",
-    "scaled_df = scaler()"
+    "scaled_df = scaler.fit_transform()"
    ]
   },
   {
