Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -443,7 +443,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaler = scaler()\n",
+    "scaler = StandardScaler\n",
     "scaled_df = scaler.fit_transform()"
    ]
   },
