--- a/index.ipynb
+++ b/index.ipynb
@@ -439,12 +439,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaler = StandardScaler\n",
-    "scaled_df = scaler.fit_transform()"
+    "scaler = StandardScaler\n"
    ]
   },
   {
