--- a/index.ipynb
+++ b/index.ipynb
@@ -443,7 +443,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaler = StandardScaler\n"
+    "scaler = StandardScaler\n",
+    "standard_df = scaler.fit"
    ]
   },
   {
