Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -467,8 +467,7 @@
    ],
    "source": [
     "scaler = StandardScaler()\n",
-    "standard_df = scaler.fit_transform(labels_removed_df)\n",
-    "standard_df"
+    "standard_df = pd.DataFrame(scaler.fit_transform(labels_removed_df)\n"
    ]
   },
   {
