Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -467,7 +467,7 @@
    ],
    "source": [
     "scaler = StandardScaler()\n",
-    "standard_df = pd.DataFrame(scaler.fit_transform(labels_removed_df)\n"
+    "standard_df = pd.DataFrame(scaler.fit_transform(labels_removed_df), columns=ale\n"
    ]
   },
   {
