Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1564,7 +1564,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dt_clf = \n",
+    "dt_clf = DecisionTreeClassifier()\n",
     "dt_cv_score = None\n",
     "mean_dt_cv_score = None\n",
     "\n",
