--- a/index.ipynb
+++ b/index.ipynb
@@ -1565,7 +1565,7 @@
    "outputs": [],
    "source": [
     "dt_clf = DecisionTreeClassifier()\n",
-    "dt_cv_score = cross_val_score(dt_clf,sta)\n",
+    "dt_cv_score = cross_val_score(dt_clf,standard_df,t)\n",
     "mean_dt_cv_score = None\n",
     "\n",
     "# print(\"Mean Cross Validation Score: {:.4}%\".format(mean_dt_cv_score * 100))"
