--- a/index.ipynb
+++ b/index.ipynb
@@ -610,7 +610,7 @@
    "outputs": [],
    "source": [
     "dt_clf = DecisionTreeClassifier()\n",
-    "dt_cv_score = cross_val_score(dt_clf,standard_df,labels,scoring=, cv=3)\n",
+    "dt_cv_score = cross_val_score(dt_clf,standard_df,labels,scoring=, clcv=3)\n",
     "mean_dt_cv_score = None\n",
     "\n",
     "# print(\"Mean Cross Validation Score: {:.4}%\".format(mean_dt_cv_score * 100))"
