Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -605,12 +605,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "dt_clf = DecisionTreeClassifier()\n",
-    "dt_cv_score = cross_val_score(dt_clf,standard_df,labels,scoring=cv=3)\n",
+    "dt_cv_score = cross_val_score(dt_clf,standard_df,labels,cv=3)\n",
     "mean_dt_cv_score = None\n",
     "\n",
     "# print(\"Mean Cross Validation Score: {:.4}%\".format(mean_dt_cv_score * 100))"
