Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -611,7 +611,7 @@
    "source": [
     "dt_clf = DecisionTreeClassifier()\n",
     "dt_cv_score = cross_val_score(dt_clf,standard_df,labels,cv=3)\n",
-    "mean_dt_cv_score = None\n",
+    "mean_dt_cv_score = np.mean(dt_csv_score)\n",
     "\n",
     "# print(\"Mean Cross Validation Score: {:.4}%\".format(mean_dt_cv_score * 100))"
    ]
