Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -605,15 +605,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Cross Validation Score: 44.53%\n"
+     ]
+    }
+   ],
    "source": [
     "dt_clf = DecisionTreeClassifier()\n",
     "dt_cv_score = cross_val_score(dt_clf,standard_df,labels,cv=3)\n",
-    "mean_dt_cv_score = np.mean(dt_csv_score)\n",
+    "mean_dt_cv_score = np.mean(dt_cv_score)\n",
     "\n",
-    "# print(\"Mean Cross Validation Score: {:.4}%\".format(mean_dt_cv_score * 100))"
+    "print(\"Mean Cross Validation Score: {:.4}%\".format(mean_dt_cv_score * 100))"
    ]
   },
   {
