--- a/index.ipynb
+++ b/index.ipynb
@@ -683,7 +683,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dt_param_grid = {'criterion':['gini','entropy'], \n",
+    "dt_param_grid = {'criterion':['gini','entropy'], 'max_depth':[None]\n",
     " \n",
     "}"
    ]
