Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -683,7 +683,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dt_param_grid = {'criterion':['gini','entropy'], 'max_depth':[None]\n",
+    "dt_param_grid = {'criterion':['gini','entropy'], 'max_depth':[None,2,3,4,5,6], \\\n",
+    "                 \n",
     " \n",
     "}"
    ]
