--- a/index.ipynb
+++ b/index.ipynb
@@ -684,7 +684,7 @@
    "outputs": [],
    "source": [
     "dt_param_grid = {'criterion':['gini','entropy'], 'max_depth':[None,2,3,4,5,6], \\\n",
-    "                 \n",
+    "                 'min_samples_split':[2,5,10],'mi'\n",
     " \n",
     "}"
    ]
