Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -684,9 +684,8 @@
    "outputs": [],
    "source": [
     "dt_param_grid = {'criterion':['gini','entropy'], 'max_depth':[None,2,3,4,5,6], \\\n",
-    "                 'min_samples_split':[2,5,10],'mi'\n",
-    " \n",
-    "}"
+    "                 'min_samples_split':[2,5,10],'min_samples_Leaf':[1,2,3,4,5,6]\n",
+    " }"
    ]
   },
   {
