Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -714,7 +714,7 @@
     }
    ],
    "source": [
-    "num_decision_trees = 2*\n",
+    "num_decision_trees = 2*6*3*6*3\n",
     "print(\"Grid Search will have to search through {} different permutations.\".format(num_decision_trees))"
    ]
   },
