--- a/index.ipynb
+++ b/index.ipynb
@@ -702,14 +702,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Grid Search will have to search through None different permutations.\n"
+      "Grid Search will have to search through 648 different permutations.\n"
      ]
     }
    ],
