Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -736,7 +736,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dt_grid_search = GridSearchCV(d)\n",
+    "dt_grid_search = GridSearchCV()\n",
     "#dt_grid_search.fit(None, None)"
    ]
   },
