--- a/index.ipynb
+++ b/index.ipynb
@@ -736,7 +736,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dt_grid_search = GridSearchCV(dt_clf,p)\n",
+    "dt_grid_search = GridSearchCV(dt_clf,param_grid=dt_param_grid,)\n",
     "#dt_grid_search.fit(None, None)"
    ]
   },
