Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -737,7 +737,7 @@
    "outputs": [],
    "source": [
     "dt_grid_search = GridSearchCV(dt_clf,param_grid=dt_param_grid,cv=3)\n",
-    "dt_grid_search.fit()\n",
+    "dt_grid_search.fit(dt)\n",
     "#dt_grid_search.fit(None, None)"
    ]
   },
