Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -581,7 +581,7 @@
    ],
    "source": [
     "scaler = StandardScaler()\n",
-    "standard_df = pd.DataFrame(scaler.fit_transform(labels_removed_df), columns=labels_removed_df.columns)\n",
+    "standard_df = scaler.fit_transform(labels_removed_df), columns=labels_removed_df.columns)\n",
     "standard_df.head()"
    ]
   },
