Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -439,150 +439,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>fixed acidity</th>\n",
-       "      <th>volatile acidity</th>\n",
-       "      <th>citric acid</th>\n",
-       "      <th>residual sugar</th>\n",
-       "      <th>chlorides</th>\n",
-       "      <th>free sulfur dioxide</th>\n",
-       "      <th>total sulfur dioxide</th>\n",
-       "      <th>density</th>\n",
-       "      <th>pH</th>\n",
-       "      <th>sulphates</th>\n",
-       "      <th>alcohol</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-0.528360</td>\n",
-       "      <td>0.961877</td>\n",
-       "      <td>-1.391472</td>\n",
-       "      <td>-0.453218</td>\n",
-       "      <td>-0.243707</td>\n",
-       "      <td>-0.466193</td>\n",
-       "      <td>-0.379133</td>\n",
-       "      <td>0.558274</td>\n",
-       "      <td>1.288643</td>\n",
-       "      <td>-0.579207</td>\n",
-       "      <td>-0.960246</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-0.298547</td>\n",
-       "      <td>1.967442</td>\n",
-       "      <td>-1.391472</td>\n",
-       "      <td>0.043416</td>\n",
-       "      <td>0.223875</td>\n",
-       "      <td>0.872638</td>\n",
-       "      <td>0.624363</td>\n",
-       "      <td>0.028261</td>\n",
-       "      <td>-0.719933</td>\n",
-       "      <td>0.128950</td>\n",
-       "      <td>-0.584777</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-0.298547</td>\n",
-       "      <td>1.297065</td>\n",
-       "      <td>-1.186070</td>\n",
-       "      <td>-0.169427</td>\n",
-       "      <td>0.096353</td>\n",
-       "      <td>-0.083669</td>\n",
-       "      <td>0.229047</td>\n",
-       "      <td>0.134264</td>\n",
-       "      <td>-0.331177</td>\n",
-       "      <td>-0.048089</td>\n",
-       "      <td>-0.584777</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1.654856</td>\n",
-       "      <td>-1.384443</td>\n",
-       "      <td>1.484154</td>\n",
-       "      <td>-0.453218</td>\n",
-       "      <td>-0.264960</td>\n",
-       "      <td>0.107592</td>\n",
-       "      <td>0.411500</td>\n",
-       "      <td>0.664277</td>\n",
-       "      <td>-0.979104</td>\n",
-       "      <td>-0.461180</td>\n",
-       "      <td>-0.584777</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>-0.528360</td>\n",
-       "      <td>0.961877</td>\n",
-       "      <td>-1.391472</td>\n",
-       "      <td>-0.453218</td>\n",
-       "      <td>-0.243707</td>\n",
-       "      <td>-0.466193</td>\n",
-       "      <td>-0.379133</td>\n",
-       "      <td>0.558274</td>\n",
-       "      <td>1.288643</td>\n",
-       "      <td>-0.579207</td>\n",
-       "      <td>-0.960246</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   fixed acidity  volatile acidity  citric acid  residual sugar  chlorides  \\\n",
-       "0      -0.528360          0.961877    -1.391472       -0.453218  -0.243707   \n",
-       "1      -0.298547          1.967442    -1.391472        0.043416   0.223875   \n",
-       "2      -0.298547          1.297065    -1.186070       -0.169427   0.096353   \n",
-       "3       1.654856         -1.384443     1.484154       -0.453218  -0.264960   \n",
-       "4      -0.528360          0.961877    -1.391472       -0.453218  -0.243707   \n",
-       "\n",
-       "   free sulfur dioxide  total sulfur dioxide   density        pH  sulphates  \\\n",
-       "0            -0.466193             -0.379133  0.558274  1.288643  -0.579207   \n",
-       "1             0.872638              0.624363  0.028261 -0.719933   0.128950   \n",
-       "2            -0.083669              0.229047  0.134264 -0.331177  -0.048089   \n",
-       "3             0.107592              0.411500  0.664277 -0.979104  -0.461180   \n",
-       "4            -0.466193             -0.379133  0.558274  1.288643  -0.579207   \n",
-       "\n",
-       "    alcohol  \n",
-       "0 -0.960246  \n",
-       "1 -0.584777  \n",
-       "2 -0.584777  \n",
-       "3 -0.584777  \n",
-       "4 -0.960246  "
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "scaler = StandardScaler()\n",
-    "standard_df = scaler.fit_transform(labels_removed_df), columns=labels_removed_df.columns)\n",
-    "standard_df.head()"
+    "standard_df = scaler.fit_transform(labels_removed_df)\n"
    ]
   },
   {
