Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -439,12 +439,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "scaler = StandardScaler()\n",
-    "standard_df = scaler.fit_transform(labels_removed_df)\n"
+    "scaled_df = scaler.fit_transform(labels_removed_df)\n"
    ]
   },
   {
