--- a/index.ipynb
+++ b/index.ipynb
@@ -658,8 +658,8 @@
     }
    ],
    "source": [
-    "dt_grid_search = GridSearchCV(dt_clf,param_grid=dt_param_grid,cv=3)\n",
-    "dt_grid_search.fit(standard_df,labels)\n"
+    "dt_grid_search = GridSearchCV(dt_clf, dt_param_grid, cv=3, return_train_score=True)\n",
+    "dt_grid_search.fit(scaled_df, labels)\n"
    ]
   },
   {
