Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -690,13 +690,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dt_gs_training_score = None\n",
-    "dt_gs_testing_score = None\n",
+    "dt_gs_training_score = np.mean(dt_grid_search.cv_results_['mean_train_score'])\n",
+    "dt_gs_testing_score = dt_grid_search.score(scaled_df, labels)\n",
     "\n",
-    "# print(\"Mean Training Score: {:.4}%\".format(dt_gs_training_score * 100))\n",
-    "# print(\"Mean Testing Score: {:.4}%\".format(dt_gs_testing_score * 100))\n",
-    "# print(\"Best Parameter Combination Found During Grid Search:\")\n",
-    "# dt_grid_search.best_params_"
+    "print(\"Mean Training Score: {:.4}%\".format(dt_gs_training_score * 100))\n",
+    "print(\"Mean Testing Score: {:.4}%\".format(dt_gs_testing_score * 100))\n",
+    "print(\"Best Parameter Combination Found During Grid Search:\")\n",
+    "dt_grid_search.best_params_\n",
+    "\n"
    ]
   },
   {
