--- a/index.ipynb
+++ b/index.ipynb
@@ -686,9 +686,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Training Score: 67.15%\n",
+      "Mean Testing Score: 66.04%\n",
+      "Best Parameter Combination Found During Grid Search:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'criterion': 'gini',\n",
+       " 'max_depth': 5,\n",
+       " 'min_samples_leaf': 6,\n",
+       " 'min_samples_split': 2}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dt_gs_training_score = np.mean(dt_grid_search.cv_results_['mean_train_score'])\n",
     "dt_gs_testing_score = dt_grid_search.score(scaled_df, labels)\n",
