Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -748,7 +748,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rf_clf = None\n",
+    "rf_clf = RandomForestClassifier()\n",
     "mean_rf_cv_score = None\n",
     "# print(\"Mean Cross Validation Score for Random Forest Classifier: {:.4}%\".format(mean_rf_cv_score * 100))"
    ]
