Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -749,7 +749,7 @@
    "outputs": [],
    "source": [
     "rf_clf = RandomForestClassifier()\n",
-    "mean_rf_cv_score = None\n",
+    "mean_rf_cv_score = cross_val_score(rf_clf,)\n",
     "# print(\"Mean Cross Validation Score for Random Forest Classifier: {:.4}%\".format(mean_rf_cv_score * 100))"
    ]
   },
