--- a/index.ipynb
+++ b/index.ipynb
@@ -798,7 +798,7 @@
    "outputs": [],
    "source": [
     "rf_param_grid = {\n",
-    "    ''\n",
+    "    'n_estimators'\n",
     "}"
    ]
   },
