Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -798,7 +798,8 @@
    "outputs": [],
    "source": [
     "rf_param_grid = {\n",
-    "    'n_estimators'\n",
+    "    'n_estimators':[10,30,100],\n",
+    "    'criterion':['gini']\n",
     "}"
    ]
   },
