Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -799,7 +799,8 @@
    "source": [
     "rf_param_grid = {\n",
     "    'n_estimators':[10,30,100],\n",
-    "    'criterion':['gini']\n",
+    "    'criterion':['gini','entropy']\n",
+    "    'max_dept'\n",
     "}"
    ]
   },
