Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -800,7 +800,8 @@
     "rf_param_grid = {\n",
     "    'n_estimators':[10,30,100],\n",
     "    'criterion':['gini','entropy']\n",
-    "    'max_dept'\n",
+    "    'max_depth':[None,2,6,10],\n",
+    "    'min_'\n",
     "}"
    ]
   },
