Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -801,7 +801,8 @@
     "    'n_estimators':[10,30,100],\n",
     "    'criterion':['gini','entropy']\n",
     "    'max_depth':[None,2,6,10],\n",
-    "    'min_'\n",
+    "    'min_samples_split':[5,10],\n",
+    "    'min_sampl'\n",
     "}"
    ]
   },
