Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -802,7 +802,7 @@
     "    'criterion':['gini','entropy']\n",
     "    'max_depth':[None,2,6,10],\n",
     "    'min_samples_split':[5,10],\n",
-    "    'min_sampl'\n",
+    "    'min_samples_leaf':[3,6]\n",
     "}"
    ]
   },
