--- a/index.ipynb
+++ b/index.ipynb
@@ -793,22 +793,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-34-3f26b3a145a4>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-34-3f26b3a145a4>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    'max_depth':[None,2,6,10],\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "rf_param_grid = {\n",
     "    'n_estimators':[10,30,100],\n",
-    "    'criterion':['gini','entropy']\n",
+    "    'criterion':['gini','entropy'],\n",
     "    'max_depth':[None,2,6,10],\n",
     "    'min_samples_split':[5,10],\n",
     "    'min_samples_leaf':[3,6]\n",
@@ -841,7 +832,7 @@
    "source": [
     "import time\n",
     "start = time.time()\n",
-    "rf_grid_search =None\n",
+    "rf_grid_search =GridSearchCV\n",
     "# rf_grid_search.fit(None, None)\n",
     "\n",
     "# print(\"Testing Accuracy: {:.4}%\".format(rf_grid_search.best_score_ * 100))\n",
