Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -832,7 +832,7 @@
    "source": [
     "import time\n",
     "start = time.time()\n",
-    "rf_grid_search =GridSearchCV\n",
+    "rf_grid_search =GridSearchCV(rf_clf,param_grid=)\n",
     "# rf_grid_search.fit(None, None)\n",
     "\n",
     "# print(\"Testing Accuracy: {:.4}%\".format(rf_grid_search.best_score_ * 100))\n",
