--- a/index.ipynb
+++ b/index.ipynb
@@ -826,13 +826,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "import time\n",
     "start = time.time()\n",
-    "rf_grid_search =GridSearchCV(rf_clf,param_grid=rf_param_grid,cv=3,re)\n",
+    "rf_grid_search =GridSearchCV(rf_clf,param_grid=rf_param_grid,cv=3,return_train_score=True)\n",
     "# rf_grid_search.fit(None, None)\n",
     "\n",
     "# print(\"Testing Accuracy: {:.4}%\".format(rf_grid_search.best_score_ * 100))\n",
