Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -833,7 +833,7 @@
     "import time\n",
     "start = time.time()\n",
     "rf_grid_search =GridSearchCV(rf_clf,param_grid=rf_param_grid,cv=3,return_train_score=True)\n",
-    "# rf_grid_search.fit(None, None)\n",
+    "rf_grid_search.fit(scaled_df, N)\n",
     "\n",
     "# print(\"Testing Accuracy: {:.4}%\".format(rf_grid_search.best_score_ * 100))\n",
     "# print(\"Total Runtime for Grid Search on Random Forest Classifier: {:.4} seconds\".format(time.time() - start))\n",
