--- a/index.ipynb
+++ b/index.ipynb
@@ -826,19 +826,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import time\n",
     "start = time.time()\n",
     "rf_grid_search =GridSearchCV(rf_clf,param_grid=rf_param_grid,cv=3,return_train_score=True)\n",
-    "rf_grid_search.fit(scaled_df, N)\n",
+    "rf_grid_search.fit(scaled_df, labels)\n",
     "\n",
-    "# print(\"Testing Accuracy: {:.4}%\".format(rf_grid_search.best_score_ * 100))\n",
-    "# print(\"Total Runtime for Grid Search on Random Forest Classifier: {:.4} seconds\".format(time.time() - start))\n",
-    "# print(\"\")\n",
-    "# print(\"Optimal Parameters: {}\".format(rf_grid_search.best_params_))"
+    "print(\"Testing Accuracy: {:.4}%\".format(rf_grid_search.best_score_ * 100))\n",
+    "print(\"Total Runtime for Grid Search on Random Forest Classifier: {:.4} seconds\".format(time.time() - start))\n",
+    "print(\"\")\n",
+    "print(\"Optimal Parameters: {}\".format(rf_grid_search.best_params_))"
    ]
   },
   {
