Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -826,9 +826,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing Accuracy: 58.54%\n",
+      "Total Runtime for Grid Search on Random Forest Classifier: 40.46 seconds\n",
+      "\n",
+      "Optimal Parameters: {'criterion': 'gini', 'max_depth': 6, 'min_samples_leaf': 6, 'min_samples_split': 10, 'n_estimators': 100}\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "start = time.time()\n",
