--- a/index.ipynb
+++ b/index.ipynb
@@ -877,7 +877,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adaboost_clf = None\n",
+    "adaboost_clf = AdaBoostClassifier()\n",
     "adaboost_mean_cv_score = None\n",
     "\n",
     "# print(\"Mean Cross Validation Score for AdaBoost: {:.4}%\".format(adaboost_mean_cv_score * 100))"
