--- a/index.ipynb
+++ b/index.ipynb
@@ -878,7 +878,7 @@
    "outputs": [],
    "source": [
     "adaboost_clf = AdaBoostClassifier()\n",
-    "adaboost_mean_cv_score = None\n",
+    "adaboost_mean_cv_score = np.mean(cro)\n",
     "\n",
     "# print(\"Mean Cross Validation Score for AdaBoost: {:.4}%\".format(adaboost_mean_cv_score * 100))"
    ]
