--- a/index.ipynb
+++ b/index.ipynb
@@ -878,7 +878,7 @@
    "outputs": [],
    "source": [
     "adaboost_clf = AdaBoostClassifier()\n",
-    "adaboost_mean_cv_score = np.mean(cross_val_score(adaboost_clf,))\n",
+    "adaboost_mean_cv_score = np.mean(cross_val_score(adaboost_clf,scaled_df,labels,cv=))\n",
     "\n",
     "# print(\"Mean Cross Validation Score for AdaBoost: {:.4}%\".format(adaboost_mean_cv_score * 100))"
    ]
