--- a/index.ipynb
+++ b/index.ipynb
@@ -873,12 +873,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "adaboost_clf = AdaBoostClassifier()\n",
-    "adaboost_mean_cv_score = np.mean(cross_val_score(adaboost_clf,scaled_df,labels,cv=))\n",
+    "adaboost_mean_cv_score = np.mean(cross_val_score(adaboost_clf,scaled_df,labels,cv=3))\n",
     "\n",
     "# print(\"Mean Cross Validation Score for AdaBoost: {:.4}%\".format(adaboost_mean_cv_score * 100))"
    ]
