--- a/index.ipynb
+++ b/index.ipynb
@@ -873,14 +873,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Cross Validation Score for AdaBoost: 53.03%\n"
+     ]
+    }
+   ],
    "source": [
     "adaboost_clf = AdaBoostClassifier()\n",
     "adaboost_mean_cv_score = np.mean(cross_val_score(adaboost_clf,scaled_df,labels,cv=3))\n",
     "\n",
-    "# print(\"Mean Cross Validation Score for AdaBoost: {:.4}%\".format(adaboost_mean_cv_score * 100))"
+    "print(\"Mean Cross Validation Score for AdaBoost: {:.4}%\".format(adaboost_mean_cv_score * 100))"
    ]
   },
   {
