Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -912,7 +912,8 @@
    "outputs": [],
    "source": [
     "adaboost_param_grid = {\n",
-    "    'n_estimators':[]\n",
+    "    'n_estimators':[50,100,250],\n",
+    "    \n",
     "    \n",
     "}"
    ]
