--- a/index.ipynb
+++ b/index.ipynb
@@ -913,8 +913,8 @@
    "source": [
     "adaboost_param_grid = {\n",
     "    'n_estimators':[50,100,250],\n",
-    "    \n",
-    "    \n",
+    "    'learning_rate':[1.0,0.05,0.1]\n",
+    "   \n",
     "}"
    ]
   },
