--- a/index.ipynb
+++ b/index.ipynb
@@ -907,14 +907,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "adaboost_param_grid = {\n",
     "    'n_estimators':[50,100,250],\n",
-    "    'learning_rate':[1.0,0.05,0.1]\n",
-    "   \n",
+    "    'learning_rate':[1.0,0.05,0.1]   \n",
     "}"
    ]
   },
@@ -931,7 +930,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adaboost_grid_search = None\n",
+    "adaboost_grid_search = Grid\n",
     "# adaboost_grid_search.fit(None, None)\n",
     "\n",
     "# print(\"Testing Accuracy: {:.4}%\".format(adaboost_grid_search.best_score_ * 100))\n",
