Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -930,7 +930,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adaboost_grid_search = Grid\n",
+    "adaboost_grid_search = GridSearchCV(adaboost_clf,param_grid=ad)\n",
     "# adaboost_grid_search.fit(None, None)\n",
     "\n",
     "# print(\"Testing Accuracy: {:.4}%\".format(adaboost_grid_search.best_score_ * 100))\n",
