Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -930,8 +930,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adaboost_grid_search = GridSearchCV(adaboost_clf,param_grid=adaboost_param_grid,cv=3,retu)\n",
-    "# adaboost_grid_search.fit(None, None)\n",
+    "adaboost_grid_search = GridSearchCV(adaboost_clf,param_grid=adaboost_param_grid,cv=3,return_train_score=True)\n",
+    "adaboost_grid_search.fit(, None)\n",
     "\n",
     "# print(\"Testing Accuracy: {:.4}%\".format(adaboost_grid_search.best_score_ * 100))\n",
     "# print(\"Total Runtime for Grid Search on AdaBoost: {:.4} seconds\".format(time.time() - start))\n",
