--- a/index.ipynb
+++ b/index.ipynb
@@ -926,17 +926,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "adaboost_grid_search = GridSearchCV(adaboost_clf,param_grid=adaboost_param_grid,cv=3,return_train_score=True)\n",
-    "adaboost_grid_search.fit(, None)\n",
+    "adaboost_grid_search.fit(scaled_df, labels)\n",
     "\n",
-    "# print(\"Testing Accuracy: {:.4}%\".format(adaboost_grid_search.best_score_ * 100))\n",
-    "# print(\"Total Runtime for Grid Search on AdaBoost: {:.4} seconds\".format(time.time() - start))\n",
-    "# print(\"\")\n",
-    "# print(\"Optimal Parameters: {}\".format(adaboost_grid_search.best_params_))"
+    "print(\"Testing Accuracy: {:.4}%\".format(adaboost_grid_search.best_score_ * 100))\n",
+    "print(\"Total Runtime for Grid Search on AdaBoost: {:.4} seconds\".format(time.time() - start))\n",
+    "print(\"\")\n",
+    "print(\"Optimal Parameters: {}\".format(adaboost_grid_search.best_params_))"
    ]
   },
   {
