--- a/index.ipynb
+++ b/index.ipynb
@@ -928,7 +928,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing Accuracy: 56.6%\n",
+      "Total Runtime for Grid Search on AdaBoost: 384.2 seconds\n",
+      "\n",
+      "Optimal Parameters: {'learning_rate': 0.1, 'n_estimators': 100}\n"
+     ]
+    }
+   ],
    "source": [
     "%%timeit\n",
     "adaboost_grid_search = GridSearchCV(adaboost_clf,param_grid=adaboost_param_grid,cv=3,return_train_score=True)\n",
