--- a/index.ipynb
+++ b/index.ipynb
@@ -940,6 +940,10 @@
       "Testing Accuracy: 56.6%\n",
       "Total Runtime for Grid Search on AdaBoost: 396.8 seconds\n",
       "\n",
+      "Optimal Parameters: {'learning_rate': 0.1, 'n_estimators': 100}\n",
+      "Testing Accuracy: 56.6%\n",
+      "Total Runtime for Grid Search on AdaBoost: 409.6 seconds\n",
+      "\n",
       "Optimal Parameters: {'learning_rate': 0.1, 'n_estimators': 100}\n"
      ]
     }
